--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,15 @@ name: Build binaries
 
 on:
   release:
-    types:
-      - created
+    types: [created]
 
 jobs:
   binaries:
-    name: Cross-platform builds
+    name: Cross-platform binary builds
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout the repository
+      - name: Checkout
         uses: actions/checkout@v2
 
       - name: Generate build files
@@ -27,3 +26,35 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: ./dist/*
+
+  docker:
+    name: Cross-platform Docker images
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          tags: type=semver,pattern={{version}}
+          images: florentchauveau/freeswitch_exporter
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
